# cratevista

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FILE_LIST.txt  README.md  README_FIRST.md  SECURITY.md  about.hbs  about.toml  rust-toolchain.toml
ISSUES/: CONTEXT.md  (+17 more)
crates/cargo-cratevista/: Cargo.toml  LICENSE-MIT  README.md
crates/cargo-cratevista/src/: cli.rs  dispatch.rs  main.rs
crates/cargo-cratevista/src/commands/: build.rs  doctor.rs  generate.rs  init.rs  mod.rs  open.rs  serve.rs
crates/cargo-cratevista/tests/: cli.rs  docs_integrity.rs  local_registry.rs  packaging.rs  release_archive.rs  workflows.rs
crates/cratevista-config/: Cargo.toml
crates/cratevista-config/fixtures/clients_gateway_services_infra/.cratevista/docs/: checkout.md  demo-notes.md  scaling.md
crates/cratevista-config/fixtures/clients_gateway_services_infra/.cratevista/examples/: request.http  response.json
crates/cratevista-config/fixtures/clients_gateway_services_infra/.cratevista/flows/: architecture.toml
crates/cratevista-config/fixtures/clients_gateway_services_infra/.cratevista/overrides/: presentation.toml
crates/cratevista-config/fixtures/duplicate_ids/.cratevista/flows/: a_first.toml  b_second.toml
crates/cratevista-config/fixtures/duplicate_ids/.cratevista/overrides/: a_first.toml  z_last.toml
crates/cratevista-config/fixtures/invalid_refs/.cratevista/flows/: a_broken.toml  b_references.toml
crates/cratevista-config/fixtures/invalid_refs/.cratevista/overrides/: o.toml
crates/cratevista-config/src/: discover.rs  docs.rs  error.rs  lib.rs  load.rs  model.rs  overlay.rs  referenced.rs  validate.rs
crates/cratevista-config/tests/: dependency_boundary.rs  pipeline.rs
crates/cratevista-core/: Cargo.toml
crates/cratevista-core/examples/: gen_e2e_fixtures.rs  gen_flow_fixture.rs
crates/cratevista-core/src/: artifacts.rs  build.rs  clock.rs  config_diagnostics.rs  diagnostic.rs  error.rs  exit.rs  generate.rs  lib.rs  logging.rs  open.rs  paths.rs  serve.rs  usecase.rs  watch.rs  watch_recovery.rs  watch_runtime.rs
crates/cratevista-core/src/static_site/: base_path.rs  error.rs  fs_seam.rs  html.rs  lock.rs  marker.rs  materialize.rs  mod.rs  nonce.rs  output_identity.rs  safety.rs
crates/cratevista-core/tests/: build_live.rs  build_static.rs  dependency_boundary.rs  generate.rs  generate_config.rs  generate_live.rs  watch_engine.rs  watch_plan.rs  watch_recovery.rs  watch_transaction.rs
crates/cratevista-graph/: Cargo.toml
crates/cratevista-graph/src/: coverage.rs  diagnostics.rs  error.rs  input.rs  lib.rs  link.rs  merge.rs  overlay.rs  plan.rs  resolve.rs  result.rs  test_support.rs  validate.rs  views.rs
crates/cratevista-metadata/: Cargo.toml
crates/cratevista-metadata/examples/: gen_fixtures.rs  gen_metadata_fixtures.rs
crates/cratevista-metadata/fixtures/: external_path.metadata.json  single_package.metadata.json  single_package_repo.metadata.json  workspace_deps.metadata.json
crates/cratevista-metadata/src/: diagnostics.rs  error.rs  ids.rs  invoke.rs  lib.rs  normalize.rs  options.rs  result.rs  source.rs
crates/cratevista-metadata/tests/: determinism.rs  external_modes.rs  live.rs  normalize.rs  selection.rs
crates/cratevista-metadata/tests/common/: mod.rs
crates/cratevista-rustdoc/: Cargo.toml
crates/cratevista-rustdoc/examples/: gen_fixtures.rs  gen_rustdoc_fixtures.rs
crates/cratevista-rustdoc/src/: cache.rs  compat.rs  diagnostics.rs  error.rs  ids.rs  invoke.rs  lib.rs  load.rs  normalize.rs  options.rs  result.rs  spans.rs  toolchain.rs  types.rs
crates/cratevista-rustdoc/tests/: determinism.rs  identity_and_refs.rs  ids_and_impls.rs  live.rs  normalize.rs  plan_and_failure.rs  private_items.rs
crates/cratevista-rustdoc/tests/common/: mod.rs
crates/cratevista-rustdoc/tests/fixtures/: sample_lib.rustdoc.json  sample_lib_private.rustdoc.json
crates/cratevista-rustdoc/tests/fixtures/sample_lib/: Cargo.toml
crates/cratevista-rustdoc/tests/fixtures/sample_lib/src/: lib.rs
crates/cratevista-schema/: Cargo.toml
crates/cratevista-schema/examples/: gen_fixtures.rs  gen_schema.rs  gen_schema_fixtures.rs
crates/cratevista-schema/fixtures/: full_mvp.diagnostics.json  full_mvp.generation.json  manual_flow.document.json  minimal.document.json  unknown_kind.document.json
crates/cratevista-schema/schema/: cratevista-document.schema.json
crates/cratevista-schema/src/: canonical.rs  diagnostic.rs  docs.rs  document.rs  entity.rs  generation.rs  ids.rs  jsonschema.rs  kind.rs  lib.rs  relation.rs  source.rs  validate.rs  version.rs  view.rs
crates/cratevista-schema/tests/: determinism.rs  jsonschema_drift.rs  roundtrip.rs  unknown_kind.rs  validation.rs  view_docs_examples.rs
crates/cratevista-server/: Cargo.toml  build.rs
crates/cratevista-server/embedded/: index.html
crates/cratevista-server/embedded/assets/: elk-worker.min.23417756.js  elk.worker.af90117a.js  elk.worker.b189525f.js  index.14831c4e.js  index.2445e87b.css  index.4d30a5fe.js  index.66d01725.js  index.80f41ef2.css  index.83507732.js  index.96aeb078.css  index.a161bea8.js  index.a31b7dc6.css  index.af5c996f.css  index.b77fcab8.css  index.bb53f0fd.js  index.e8d32804.js
crates/cratevista-server/src/: api.rs  assets.rs  bind.rs  error.rs  events.rs  lib.rs  options.rs  router.rs  shutdown.rs  snapshot.rs  source.rs  state.rs
crates/cratevista-server/tests/: dependency_boundary.rs  e2e_fixtures.rs
crates/cratevista-watch/: Cargo.toml
crates/cratevista-watch/src/: classify.rs  debounce.rs  engine.rs  event.rs  lib.rs  pattern.rs  plan.rs  watcher.rs
crates/cratevista-watch/tests/: dependency_boundary.rs  real_watcher.rs
web/fixtures/partial-workspace/: Cargo.toml
web/fixtures/partial-workspace/crates/cvbroken/: Cargo.toml
web/fixtures/partial-workspace/crates/cvbroken/src/: lib.rs
web/fixtures/sample-workspace/: Cargo.toml
web/fixtures/sample-workspace/crates/cvapp/: Cargo.toml
web/fixtures/sample-workspace/crates/cvapp/src/: lib.rs
web/fixtures/sample-workspace/crates/cvcore/: Cargo.toml
(+263 files in other folders)
