[package]
name = "cratevista-config"
description = "Project-local CrateVista configuration: manual flows, entities and presentation overrides."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
# Schema types + the traversal-safe repo-relative path validator.
cratevista-schema = { workspace = true }
# The overlay seam (`GraphOverlay`/`EntityOverride`) this crate converts INTO.
# One-way by design: `cratevista-graph` stays pure and never depends on config.
cratevista-graph = { workspace = true }
serde = { workspace = true }
# `AttrValue` is `serde_json::Value`, so mapping TOML attributes needs it.
serde_json = { workspace = true }
toml = { workspace = true }
serde_spanned = { workspace = true }

[dev-dependencies]
tempfile = "3"
# TESTS ONLY. `cratevista_graph::build_document` takes a `GraphInput`, which
# carries a `MetadataIngest`; the integration tests build one so they can prove
# manual and DISCOVERED entities coexist in a real, schema-valid document.
# This is not a runtime dependency: config never reaches for metadata when it
# runs, and `tests/dependency_boundary.rs` enforces that distinction.
cratevista-metadata = { workspace = true }
