[package]
name = "cratevista-graph"
description = "Pure semantic-graph assembly and generated views for CrateVista."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cratevista-schema = { workspace = true }
cratevista-metadata = { workspace = true }
cratevista-rustdoc = { workspace = true }
serde_json = { workspace = true }
