[package]
name = "cratevista-metadata"
description = "Cargo workspace metadata ingestion for CrateVista."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cratevista-schema = { workspace = true }
cargo_metadata = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
