[package]
name = "cratevista-rustdoc"
description = "rustdoc JSON invocation and normalization adapter for CrateVista."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
cratevista-schema = { workspace = true }
rustdoc-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
