[package]
name = "cratevista-schema"
description = "Canonical, versioned, frontend-independent CrateVista explorer document model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
jsonschema = { workspace = true }
