# Dedicated, self-contained Cargo workspace used ONLY to generate the PRD-07
# **partial** E2E snapshot. It has its own `[workspace]` table so it is fully
# independent of the top-level CrateVista workspace (which globs only `crates/*`).
# Not built or tested by the main project.
#
# `cvbroken` deliberately fails to compile, so `generate --keep-going` documents
# `cvcore`, records a diagnostic for `cvbroken`, and marks the result partial.
# This produces a GENUINE `partial: true` snapshot rather than a hand-edited flag.
[workspace]
resolver = "2"
members = ["crates/cvcore", "crates/cvbroken"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
