# Dedicated, self-contained Cargo workspace used ONLY to generate the PRD-07
# `all_views.document.json` frontend fixture. It has its own `[workspace]` table
# so it is fully independent of the top-level CrateVista workspace (which globs
# only `crates/*`). Not built or tested by the main project.
[workspace]
resolver = "2"
members = ["crates/cvcore", "crates/cvapp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
